Refactor: Set 'converToBook' method.